--- a/app/src/main/res/layout/activity_app_main.xml
+++ b/app/src/main/res/layout/activity_app_main.xml
@@ -91,7 +91,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipChildren="false"
-            android:clipToPadding="false"></androidx.viewpager2.widget.ViewPager2>
+            android:clipToPadding="false">
+        </androidx.viewpager2.widget.ViewPager2>
     </FrameLayout>
 
     <LinearLayout
