Before_Notification_Change_Commit

--- a/app/src/main/res/layout/activity_setting_my_profile.xml
+++ b/app/src/main/res/layout/activity_setting_my_profile.xml
@@ -15,7 +15,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
     android:layout_height="match_parent"
     tools:context="com.bigjeon.grumbling.Setting_My_Profile_Activity">
     <LinearLayout
-        android:padding="6dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -80,7 +79,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="6dp"
-                    android:layout_marginEnd="6dp"
+                    android:layout_marginLeft="6dp"
                     android:src="@drawable/default_profile_img"
                     app:civ_border_color="@color/Sub_Tutle_Color"
                     app:civ_border_width="1dp">
@@ -98,12 +97,13 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     android:gravity="center_vertical"
                     android:includeFontPadding="false"
                     android:text="#123 - 123"
-                    android:textColor="@color/Theme_Text_Color"
-                    android:textSize="14dp"></TextView>
+                    android:textColor="@color/Theme_Less_Accent_Color"
+                    android:textSize="16dp"></TextView>
 
                 <RelativeLayout
                     android:id="@+id/RTL1"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginBottom="6dp"
                     android:layout_below="@id/Setting_Activity_State_Msg_Tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -112,8 +112,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                         android:layout_width="match_parent"
                         android:layout_height="35dp"
                         android:layout_alignParentRight="true"
-                        android:layout_marginLeft="6dp"
-                        android:layout_marginRight="6dp"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
 
@@ -135,6 +133,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                             android:padding="6dp"
                             android:background="@drawable/transparent_round_shape"
                             android:layout_marginLeft="6dp"
+                            android:layout_marginRight="6dp"
                             android:layout_weight="1"
                             android:layout_width="0dp"
                             android:layout_height="match_parent">
@@ -163,7 +162,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
                     android:fontFamily="@font/notosans_medium"
                     android:textSize="14dp"
                     android:includeFontPadding="false"
-                    android:textColor="@color/Theme_Less_Accent_Color"
+                    android:textColor="@color/Theme_Text_Color"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"></TextView>
 
