--- a/app/src/main/res/layout/activity_user_profile_view.xml
+++ b/app/src/main/res/layout/activity_user_profile_view.xml
@@ -16,7 +16,6 @@
     tools:context="com.bigjeon.grumbling.User_Profile_View_activity">
     <LinearLayout
         android:orientation="vertical"
-        android:padding="6dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <RelativeLayout
@@ -36,7 +35,6 @@
             <TextView
                 android:id="@+id/Setting_Fragment_My_Name_Tv"
                 android:text="User_Name"
-                android:padding="2dp"
                 android:textSize="18dp"
                 android:textStyle="bold"
                 android:includeFontPadding="false"
@@ -50,7 +48,6 @@
         </RelativeLayout>
         <LinearLayout
             android:orientation="vertical"
-            android:paddingTop="6dp"
             android:layout_marginLeft="6dp"
             android:layout_marginRight="6dp"
             android:layout_width="match_parent"
@@ -58,7 +55,8 @@
             <RelativeLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:gravity="top">
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/Setting_Fragment_My_Profile_Img_Civ"
                     android:layout_width="100dp"
@@ -66,7 +64,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="6dp"
-                    android:layout_marginEnd="6dp"
+                    android:layout_marginLeft="6dp"
                     android:src="@drawable/default_profile_img"
                     app:civ_border_color="@color/Sub_Tutle_Color"
                     app:civ_border_width="1dp">
@@ -84,8 +82,8 @@
                     android:gravity="center_vertical"
                     android:includeFontPadding="false"
                     android:text="#123 - 123"
-                    android:textColor="@color/Theme_Text_Color"
-                    android:textSize="14dp"></TextView>
+                    android:textColor="@color/Theme_Less_Accent_Color"
+                    android:textSize="16dp"></TextView>
                 <TextView
                     android:id="@+id/User_Profile_Activity_State_Msg_Tv"
                     android:gravity="center"
@@ -99,7 +97,7 @@
                     android:fontFamily="@font/notosans_medium"
                     android:textSize="14dp"
                     android:includeFontPadding="false"
-                    android:textColor="@color/Theme_Less_Accent_Color"
+                    android:textColor="@color/Theme_Text_Color"
                     android:layout_width="match_parent"
                     android:layout_height="60dp">
                 </TextView>
