--- a/app/src/main/res/layout/fragment_set__post__text.xml
+++ b/app/src/main/res/layout/fragment_set__post__text.xml
@@ -13,12 +13,12 @@
             android:id="@+id/TV1"
             android:text="텍스트 설정"
             android:fontFamily="@font/notosans_medium"
-            android:textSize="10dp"
-            android:textStyle="bold"
+            android:textSize="16dp"
+            android:paddingBottom="6dp"
             android:textColor="@color/Theme_Text_Color"
             android:includeFontPadding="false"
             android:layout_width="wrap_content"
-            android:layout_height="20dp">
+            android:layout_height="wrap_content">
         </TextView>
         <RelativeLayout
             android:id="@+id/SeekBar_Con"
