--- a/app/src/main/res/layout/friend_list_fragment_view_.xml
+++ b/app/src/main/res/layout/friend_list_fragment_view_.xml
@@ -47,8 +47,8 @@
                 app:civ_border_width="0.5dp"
                 android:layout_marginTop="8dp"
                 app:civ_border_color="@color/Transparent_Green"
-                android:layout_width="50dp"
-                android:layout_height="50dp">
+                android:layout_width="60dp"
+                android:layout_height="60dp">
             </de.hdodenhof.circleimageview.CircleImageView>
             <TextView
                 android:id="@+id/Friend_List_My_Name_TV"
@@ -60,19 +60,19 @@
                 android:includeFontPadding="false"
                 android:gravity="center"
                 android:textColor="@color/Theme_Text_Color"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="6dp"
+                android:layout_marginLeft="6dp"
+                android:layout_marginTop="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </TextView>
             <TextView
                 android:id="@+id/Friend_List_Fragment_My_Uid"
-                android:layout_marginTop="4dp"
-                android:textSize="14dp"
+                android:layout_marginTop="6dp"
+                android:textSize="15dp"
                 android:text="#내 지역"
                 android:includeFontPadding="false"
-                android:fontFamily="@font/notosans_medium"
-                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/notosans_regular"
+                android:layout_marginLeft="6dp"
                 android:layout_toRightOf="@id/Friend_List_My_Img_Civ"
                 android:layout_below="@id/Friend_List_My_Name_TV"
                 android:textColor="@color/Theme_Less_Accent_Color"
