--- a/app/src/main/res/layout/other_chatting_item.xml
+++ b/app/src/main/res/layout/other_chatting_item.xml
@@ -15,7 +15,7 @@
         android:src="@drawable/app_logo"
         android:layout_marginTop="2dp"
         app:civ_border_width="0.2dp"
-        app:civ_border_color="@color/Theme_Text_Color"
+        app:civ_border_color="@color/Sub_Tutle_Color"
         android:layout_width="35dp"
         android:layout_height="35dp">
     </de.hdodenhof.circleimageview.CircleImageView>
