--- a/app/src/main/res/layout/other_chatting_reply.xml
+++ b/app/src/main/res/layout/other_chatting_reply.xml
@@ -14,7 +14,7 @@
                 android:src="@drawable/app_logo"
                 app:civ_border_width="0.2dp"
                 android:layout_marginTop="2dp"
-                app:civ_border_color="@color/Theme_Text_Color"
+                app:civ_border_color="@color/Sub_Tutle_Color"
                 android:layout_width="35dp"
                 android:layout_height="35dp">
             </de.hdodenhof.circleimageview.CircleImageView>
