--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -58,6 +58,7 @@
 
 
     <color name="Sub_Tutle_Color">#FFFFFF</color>
+    <color name="Post_Titel_Container_Color">#50000000</color>
     <color name="Post_Write_Setting_Conatiner_Color">#70FFFFFF</color>
     <color name="State_Msg_Color_Background">#20FFFFFF</color>
     <color name="P2P_Chat_Room_Color">#10FFFFFF</color>
@@ -68,6 +69,7 @@
     <color name="None_Friend_State_Color">#FFFFFF</color>
     <color name="Post_Create_Color">#FFFFFF</color>
     <color name="Theme_Less_Accent_Color">#98FFFFFF</color>
+    <color name="Theme_Background_Less_Accent_Color">#95000000</color>
     <color name="Theme_Chat_List_Color">#20FFFFFF</color>
     <color name="Theme_Text_Color">#FFFFFF</color>
     <color name="Btn_Off_Color">#40FFFFFF</color>
