--- a/app/src/main/res/drawable/chat_reply_under_edge_1dp.xml
+++ b/app/src/main/res/drawable/chat_reply_under_edge_1dp.xml
@@ -10,7 +10,7 @@
                 android:width="0.5dp"
                 android:color="@color/Theme_Less_Accent_Color">
             </stroke>
-            <solid android:color="@color/white"></solid>
+            <solid android:color="@android:color/transparent"></solid>
         </shape>
     </item>
 </layer-list>
