--- a/app/src/main/res/drawable/other_chat_background.xml
+++ b/app/src/main/res/drawable/other_chat_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#ffffff"/>
-    <stroke android:color="@color/dark_mint" android:width="1dp"/>
-    <corners android:radius="4dp"/>
+    <solid android:color="@color/Other_Chat_Item_Backcolor"/>
+    <stroke android:color="@android:color/transparent" android:width="0.5dp"/>
+    <corners android:radius="10dp"/>
 
 </shape>
