--- a/app/src/main/res/drawable/state_friend_btn_shape.xml
+++ b/app/src/main/res/drawable/state_friend_btn_shape.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/P2P_Chat_Room_Color"/>
+    <solid android:color="@color/Sub_Tutle_Color"/>
 
     <corners
         android:topLeftRadius="7dp"
