--- a/app/src/main/res/layout/activity_app_main.xml
+++ b/app/src/main/res/layout/activity_app_main.xml
@@ -182,7 +182,7 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_centerInParent="true"
-                android:src="@drawable/app_logo"
+                android:src="@drawable/user_profile_default_img"
                 app:civ_border_color="@color/Sub_Tutle_Color"
                 app:civ_border_width="0.5dp"></de.hdodenhof.circleimageview.CircleImageView>
         </RelativeLayout>
