--- a/app/src/main/res/layout/my_chatting_item.xml
+++ b/app/src/main/res/layout/my_chatting_item.xml
@@ -3,8 +3,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="4dp">
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
+    android:background="@android:color/transparent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:id="@+id/Chatting_Text_Container"
         android:layout_alignParentRight="true"
@@ -20,7 +22,7 @@
         android:background="@drawable/my_chat_background"
         android:textColor="@color/black"
         android:layout_alignParentRight="true"
-        android:textSize="11dp"
+        android:textSize="14dp"
         android:padding="8dp"
         android:layout_marginBottom="5dp"
         android:layout_width="wrap_content"
