--- a/app/src/main/res/layout/other_chatting_item.xml
+++ b/app/src/main/res/layout/other_chatting_item.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
+    android:layout_width="220dp"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
+    android:background="@android:color/transparent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="4dp">
+    android:padding="2dp">
     <RelativeLayout
         android:layout_weight="4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/Chatting_User_Img_CIV"
-        android:src="@drawable/app_logo"
+        android:src="@drawable/user_profile_default_img"
         android:layout_marginTop="2dp"
         app:civ_border_width="0.2dp"
         app:civ_border_color="@color/Sub_Tutle_Color"
@@ -22,7 +25,7 @@
 
     <TextView
         android:id="@+id/Chatting_User_Name_TV"
-        android:textSize="12dp"
+        android:textSize="14dp"
         android:text="유저 이름"
         android:includeFontPadding="false"
         android:fontFamily="@font/notosans_medium"
@@ -47,7 +50,7 @@
             android:includeFontPadding="false"
             android:fontFamily="@font/notosans_medium"
             android:text="내용입력창입니다."
-            android:textColor="@color/black"
+            android:textColor="@color/Theme_Text_Color"
             android:textSize="14dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -55,7 +58,7 @@
         <TextView
             android:text="입력시간"
             android:id="@+id/Chatting_WriteDate_TV"
-            android:layout_alignRight="@+id/Chatting_Text_TV"
+            android:layout_toRightOf="@id/Chatting_Text_TV"
             android:layout_below="@id/Chatting_Text_TV"
             android:textSize="7dp"
             android:includeFontPadding="false"
