--- a/app/src/main/res/layout/post_view_item.xml
+++ b/app/src/main/res/layout/post_view_item.xml
@@ -184,21 +184,12 @@
                 tools:listitem="@layout/other_chatting_item">
             </androidx.recyclerview.widget.RecyclerView>
             <Button
-                android:visibility="gone"
                 android:id="@+id/Post_View_Go_ChatRoom_Btn"
-                android:text="더보기..."
-                android:textSize="12dp"
-                android:layout_marginTop="6dp"
-                android:layout_marginBottom="2dp"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@id/Chat_List_Rcv"
-                android:background="@drawable/round_shape_off"
-                android:textColor="@color/Theme_Text_Color"
-                android:includeFontPadding="false"
-                android:fontFamily="@font/notosans_medium"
-                android:padding="2dp"
-                android:layout_width="wrap_content"
-                android:layout_height="24dp">
+                android:padding="12dp"
+                android:background="@android:color/transparent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignBottom="@id/Chat_List_Rcv">
             </Button>
         </RelativeLayout>
         </RelativeLayout>
