--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -12,7 +12,7 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/Friend_List_User_Img_Civ"
             android:layout_alignParentLeft="true"
-            android:src="@drawable/app_logo"
+            android:src="@drawable/user_profile_default_img"
             app:civ_border_color="@color/Sub_Tutle_Color"
             app:civ_border_width="0.5dp"
             android:layout_width="50dp"
